2008-04-01  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Updated command line parameters, epmd section
	* doc/guide.html: Likewise

	* doc/api/Makefile: Report the correct ejabberd version. When
	cleaning, remove also erlang.png

	* src/mod_muc/mod_muc_room.erl: Update source code to prevent
	warning messages from EDoc
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/nodetree_default.erl: Likewise
	* src/mod_pubsub/nodetree_virtual.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

2008-04-01  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Add firewalling port range definition
	* src/ejabberdctl.cfg.example: Likewise

2008-03-31  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: Remove code of the unused listening
	socket option 'ssl' (EJAB-159)
	* src/ejabberd_app.erl: Likewise

	* doc/webadmmain.png: Updated to ejabberd 2.0.0
	* doc/webadmmainru.png: Likewise

	* doc/disco.png: Removed because not used
	
	* doc/guide.tex: Fix Latex reference to webadmin section. Update
	explanation of screenshots. Update xmpp addresses of Mickael
	Remond and Sander Devrieze.
	* doc/guide.html: Likewise

	* doc/Makefile: Remove the Hevea deprecated option -noiso
	* doc/guide.html: Likewise
	* doc/dev.html: Likewise
	* doc/features.html: Likewise

	* src/ejabberd_listener.erl (start_listener): Start also the
	supervisor of the module

2008-03-27  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix epam location (thanks to Evgeniy Khramtsov)
	* doc/guide.html: Likewise

2008-03-26  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Support for parallel compilation with 'make -j'
	in multi core CPUs: fix compilation dependencies; compile
	behaviors before other source code. (thanks to Jonathan Schleifer)
	* src/mod_pubsub/Makefile.in: Likewise
	* src/eldap/Makefile.in: Likewise

2008-03-26  Alexey Shchepin  <alexey@process-one.net>
